# sample_for_tetriarch

./: .clang-format  .clang-format-ignore  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  main.cpp
assets/: cube.json  empty.yaml  shorty.yaml  start.yaml
assets/materials/: fake_material.yaml
assets/meshes/: fake_mesh.yaml
assets/rml/: rml.rcss  test.rml
assets/shaders/: bgfx_compute.sh  position_color.vert.hlsl  solid_color.frag.hlsl
client/: .clang-format  CMakeLists.txt
client/src/: archetype.cpp  archetype.h  archetype_storage.h  archetypes.cpp  archetypes.h  asset_provider.cpp  basic_entity_db.h  bgfx_application.cpp  camera_system.h  debug_cubes_rendering_system.cpp  debug_cubes_rendering_system.h  ecs_systems.cpp  ecs_systems.h  entity.cpp  entity.h  entity_command_buffer.h  entity_db.h  entity_query.cpp  entity_query.h  entity_traits.h  fn_traits.h  i_application.h  i_asset.h  i_window.h  main.cpp  query.h  sdl_window.cpp  shader_program_asset.cpp  sim_time.cpp  sim_time.h  simple_file_provider.cpp  sparse_set.h  table.h  time.cpp  time.h  transform.h  tuple_traits.h
client/src/assets/: asset_provider.cpp  heightmap_asset.cpp  heightmap_asset.h  i_asset.h  i_asset_provider.h  i_file_provider.h  loaders.h  shader_program_asset.cpp  shader_program_asset.h
client/src/assets/loaders/: asset_provider.cpp  asset_provider.h  heightmap_asset_loader.cpp  heightmap_asset_loader.h  i_asset_loader.h  i_file_provider.h  loaders.cpp  shader_program_loader.cpp  shader_program_loader.h  simple_file_provider.cpp  simple_file_provider.h
client/src/components/: axis_debug.h  components.cpp  debug_components.h  orbit_camera.h  pos_color_vertex.h  terrain_chunk.h  transform.h
client/src/systems/: axis_debug_system.cpp  axis_debug_system.h  camera_system.cpp  camera_system.h  debug_cube_system.cpp  debug_cube_system.h  debug_cubes_rendering_system.cpp  debug_cubes_rendering_system.h  ecs_systems.cpp  ecs_systems.h  frame_rate_system.cpp  frame_rate_system.h  orbit_camera_system.cpp  orbit_camera_system.h  sample_terrain_system.cpp  sample_terrain_system.h
editor/: component_editor.cpp  component_editor.h  editor.cpp  editor.h  i_component_editor.h
engine/: CMakeLists.txt  asset_database.cpp  asset_database.h  component.h  forward.h  game_object.cpp  game_object.h  globals.cpp  guid.cpp  guid.h  i_asset.h  i_asset_loader.h  i_component_parser.h  i_file_provider.h  math.cpp  math.h  null_file_provider.cpp  null_file_provider.h  object_database.h  reflection.h  renderer.h  scoped.h  system_file_provider.cpp  system_file_provider.h  transform.cpp
engine/include/wut/: component.h  entity.h  flags.h  fwd.h  gltf.h  scheduler.h  scoped.h  serialization.h  task.h  transform.h
engine/loaders/: mesh_loader.cpp  mesh_loader.h
engine/reflection/: reflection.h
engine/renderables/: mesh.h
engine/src/: component.cpp  entity.cpp  gltf.cpp  scheduler.cpp  serialization.cpp  task.cpp
ext/: .gitignore  CMakeLists.txt
ext/imgui/: CMakeLists.txt
ext/stb/: CMakeLists.txt  stb_image.cpp
ext/stb/include/stb/: stb_image.h
game/: CMakeLists.txt
game/component/: camera.cpp  camera.h  initial_scene_load_component.cpp  initial_scene_load_component.h  prefab.h
game/component_editors/: camera_editor.cpp  camera_editor.h
game/csharp/: .gitignore  ComponentStore.cs  Entity.cs  EntityRegistry.cs  GameManager.GameInitializeOptions.cs  GameManager.cs  GameObject.cs  IComponentStore.cs  IRenderSystem.cs  IUpdateSystem.cs  Log.cs  LogLevel.cs  NativeMethods.cs  WutGame.csproj
game/go/: scene.cpp  scene.h
game/loaders/: scene_loader.cpp  scene_loader.h
game/parsers/: camera_parser.cpp  camera_parser.h  prefab_parser.cpp  prefab_parser.h
game/src/: game_object.cpp  game_object.h  main.cpp  ref_ptr.h
imgui/: CMakeLists.txt
server/: CMakeLists.txt
server/app/: main.cpp
server/include/server/design_data/: design_data.h  spawn_def.h
server/include/server/systems/: mob_messages.h  mob_system.h  spawn_messages.h  spawn_system.h
server/src/: main.cpp  random.cpp  random.h
server/src/design_data/: design_data.h  spawn_def.h
server/src/systems/: mob_messages.h  mob_system.cpp  mob_system.h  spawn_messages.h  spawn_system.cpp  spawn_system.h
server/tests/: fake_content_db.h  spawn_system_tests.cpp  test_data.cpp  test_data.h
server/tests/integration_tests/: mob_spawn_integration_tests.cpp
server/tests/system_tests/: mob_system_tests.cpp  spawn_system_tests.cpp
shared/: CMakeLists.txt
shared/include/shared/: attrs.h  content_db.h  content_variant.h  dispose_handle.h  enum_flags.h  event.h  hash.h  math.h  message_dispatch.h  protocol.h  reflection.h  serialization.h  sparse_set.h  type_traits.h
shared/include/shared/design_data/: design_data.h  item_def.h  loot_table_def.h  mob_def.h  player_spawn_def.h
shared/include/shared/design_data/testing/: fake_content_db.h
shared/include/shared/serialization/: misc.h  reader.h  writer.h
shared/src/: bin_serialization.cpp  binary_serialization.cpp  content_db.cpp  empty.cpp  json_serialization.cpp  math.cpp  protocol.cpp  serialization.cpp
shared/tests/: empty.cpp  math_tests.cpp  protocol_tests.cpp  serialization_tests.cpp  sparse_set_tests.cpp
shared/tests/design_data/: loot_table_def_tests.cpp
src/: main.cpp  rml_context.cpp  rml_context.h
src/editor/: component_editor.cpp  component_editor.h  editor.cpp  editor.h
src/engine/: asset_database.cpp  asset_database.h  callback.cpp  callback.h  component.cpp  component.h  forward.h  game_object.cpp  game_object.h  globals.cpp  i_asset_loader.h  i_file_provider.h  i_renderable.h  math.cpp  math.h  null_file_provider.cpp  null_file_provider.h  object_database.cpp  renderer.cpp  renderer_forward.h  system_file_provider.cpp  system_file_provider.h
src/engine/loaders/: material_loader.cpp  material_loader.h
src/engine/reflection/: reflection.cpp  (+1 more)
test/: CMakeLists.txt
test/src/: component_tests.cpp  entity_serialization_tests.cpp  entity_tests.cpp  gltf_tests.cpp  scheduler_tests.cpp  serialization_tests.cpp  task_tests.cpp
(+15 files in other folders)
